# flag

./: .codacy.yml  .coveragerc  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  README.md  description.md  pyproject.toml  renovate.json  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml  pypipublish.yml  pythonpackage.yml  pythonpublish.yml  ruff.yml
docs/: Makefile  conf.py  index.html  index.rst  make.bat  requirements.txt
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/_downloads/a594682e6442254b8aa364675f6a5d7d/: report.html
docs/_build/html/_modules/: flag.html  index.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_static/: documentation_options.js  pygments.css
example/: example.py  test.py
flag/: __init__.py  __init__.pyi
flag/data/: README.md  __init__.py
tests/: requirements.txt  test_all_subregions.py  test_custom.py  test_data.py  test_fake.py  test_flag.py  test_illegal.py  test_module.py  test_singleflag.py  test_subregional.py
utils/: html_report.py
